--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </h2>
         <img
           class="content__card-picture"
-          src="./images/image371.png"
-          alt="изображение белого автобуса ночью на фоне гор и звездного неба"
+          src="./images/imagecar.png"
+          alt="изображение машины на фоне ночного неба"
         />
         <div class="content__card-text">
           <p class="content__card-paragraph">
